--- a/public/test.html
+++ b/public/test.html
@@ -133,17 +133,20 @@
     <div class="card mb-3">
       <div class="card-body d-flex justify-content-center align-items-center gap-3">
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="hideAuditorCheckbox">
+          <input class="form-check-input" type="checkbox" id="hideAuditorCheckbox" checked>
           <label class="form-check-label ms-2" for="hideAuditorCheckbox">إخفاء اسم المدقق</label>
+
+
         </div>
         <span>|</span>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="hideDateCheckbox">
+          <input class="form-check-input" type="checkbox" id="hideDateCheckbox" checked>
           <label class="form-check-label ms-2" for="hideDateCheckbox">إخفاء تاريخ التدقيق</label>
+
         </div>
         <span>|</span>
         <div class="form-check">
-          <input class="form-check-input" type="checkbox" id="hideCollegeCheckbox">
+          <input class="form-check-input" type="checkbox" id="hideCollegeCheckbox" checked>
           <label class="form-check-label ms-2" for="hideCollegeCheckbox">إخفاء الكلية</label>
         </div>
       </div>
