--- a/public/test.html
+++ b/public/test.html
@@ -11,6 +11,12 @@
     table { background: #fff; border-radius: 10px; overflow: hidden; font-size: 14px; }
     th { background-color: #0d6efd; color: #fff; text-align: center; }
     td { text-align: center; vertical-align: middle; }
+
+    th {
+  text-align: center;       /* ✅ توسيط أفقي */
+  vertical-align: middle;   /* ✅ توسيط عمودي */
+}
+
     
 /* ✅ ضبط عرض التاريخ LTR مع التوسيط وزيادة عرضه */
 #evaluationsTableWrapper th.date-col,
