--- a/public/manage_committees.html
+++ b/public/manage_committees.html
@@ -17,6 +17,24 @@
     .filters { margin-bottom: 20px; width: 99%; margin-left: auto; margin-right: auto; }
     .action-buttons { display: flex; justify-content: center; align-items: center; gap: 5px; height: 100%; }
     .notes-btn { display: block; width: 100%; }
+
+
+  th {
+  text-align: center;       /* ✅ توسيط أفقي */
+  vertical-align: middle;   /* ✅ توسيط عمودي */
+}
+
+    
+/* ✅ ضبط عرض التاريخ LTR مع التوسيط وزيادة عرضه */
+#evaluationsTableWrapper th.date-col,
+#evaluationsTableWrapper td.date-col {
+  direction: ltr;
+  text-align: center;
+  width: 85px;     /* ✅ عرض أكبر قليلاً */
+  max-width: 85px; /* ✅ لتثبيت العرض */
+}
+
+    
   </style>
 </head>
 <body>
