--- a/public/test1.html
+++ b/public/test1.html
@@ -18,23 +18,28 @@
     .action-buttons { display: flex; justify-content: center; align-items: center; gap: 5px; height: 100%; }
     .notes-btn { display: block; width: 100%; }
 
+    th { text-align: center; vertical-align: middle; }
 
-  th {
-  text-align: center;       /* ✅ توسيط أفقي */
-  vertical-align: middle;   /* ✅ توسيط عمودي */
-}
+    /* ✅ ضبط عرض التاريخ LTR */
+    #evaluationsTableWrapper th.date-col,
+    #evaluationsTableWrapper td.date-col {
+      direction: ltr;
+      text-align: center;
+      width: 100px;
+      max-width: 100px;
+    }
 
-    
-/* ✅ ضبط عرض التاريخ LTR مع التوسيط وزيادة عرضه */
-#evaluationsTableWrapper th.date-col,
-#evaluationsTableWrapper td.date-col {
-  direction: ltr;
-  text-align: center;
-  width: 100px;     /* ✅ عرض أكبر قليلاً */
-  max-width: 100px; /* ✅ لتثبيت العرض */
-}
+    /* ✅ نسبة الاكتمال */
+    #completionRateContainer {
+      text-align: center;
+      font-weight: bold;
+      margin: 15px 0;
+      font-size: 18px;
+      color: #0d6efd;
+    }
 
-    
+    /* ✅ إخفاء الأعمدة ديناميكي */
+    .hidden-col { display: none; }
   </style>
 </head>
 <body>
@@ -57,25 +62,74 @@
       </div>
     </div>
 
+    <!-- نسبة الاكتمال -->
+    <div id="completionRateContainer"></div>
+
+    <!-- خيارات الأعمدة -->
+    <div class="card mb-3">
+      <div class="card-body d-flex flex-wrap justify-content-center gap-3" id="columnToggles">
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_formation_decision" data-field="formation_decision" checked>
+          <label class="form-check-label" for="toggle_formation_decision">قرار التشكيل</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_work_plan" data-field="work_plan" checked>
+          <label class="form-check-label" for="toggle_work_plan">خطة العمل</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_performance_indicators" data-field="performance_indicators" checked>
+          <label class="form-check-label" for="toggle_performance_indicators">مؤشرات الأداء</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_meetings" data-field="meetings" checked>
+          <label class="form-check-label" for="toggle_meetings">عدد الاجتماعات</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_consistency" data-field="consistency" checked>
+          <label class="form-check-label" for="toggle_consistency">التوافق بين الدعوات والاجتماعات</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_coverage_books" data-field="coverage_books" checked>
+          <label class="form-check-label" for="toggle_coverage_books">كتب التغطية</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_report1" data-field="report1" checked>
+          <label class="form-check-label" for="toggle_report1">تقرير إنجاز 1</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_report2" data-field="report2" checked>
+          <label class="form-check-label" for="toggle_report2">تقرير إنجاز 2</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_report3" data-field="report3" checked>
+          <label class="form-check-label" for="toggle_report3">تقرير إنجاز 3</label>
+        </div>
+        <div class="form-check">
+          <input class="form-check-input col-toggle" type="checkbox" id="toggle_statistical_analysis" data-field="statistical_analysis" checked>
+          <label class="form-check-label" for="toggle_statistical_analysis">التحليل الإحصائي</label>
+        </div>
+      </div>
+    </div>
+
     <!-- الجدول -->
-    <table class="table table-bordered table-striped table-responsive">
+    <table class="table table-bordered table-striped table-responsive" id="evaluationsTableWrapper">
       <thead>
         <tr>
           <th>#</th>
           <th>الكلية</th>
           <th>اسم اللجنة</th>
           <th>اسم المدقق</th>
-          <th>تاريخ التدقيق</th>
-          <th>قرار التشكيل</th>
-          <th>خطة العمل</th>
-          <th>مؤشرات الأداء</th>
-          <th>عدد الاجتماعات</th>
-          <th>التوافق بين الدعوات والاجتماعات</th>
-          <th>كتب التغطية</th>
-          <th>تقرير إنجاز 1</th>
-          <th>تقرير إنجاز 2</th>
-          <th>تقرير إنجاز 3</th>
-          <th>التحليل الإحصائي</th>
+          <th class="date-col">تاريخ التدقيق</th>
+          <th class="col-formation_decision">قرار التشكيل</th>
+          <th class="col-work_plan">خطة العمل</th>
+          <th class="col-performance_indicators">مؤشرات الأداء</th>
+          <th class="col-meetings">عدد الاجتماعات</th>
+          <th class="col-consistency">التوافق بين الدعوات والاجتماعات</th>
+          <th class="col-coverage_books">كتب التغطية</th>
+          <th class="col-report1">تقرير إنجاز 1</th>
+          <th class="col-report2">تقرير إنجاز 2</th>
+          <th class="col-report3">تقرير إنجاز 3</th>
+          <th class="col-statistical_analysis">التحليل الإحصائي</th>
           <th>درجة التوفر</th>
           <th>الملاحظات</th>
           <th>إجراءات</th>
@@ -87,7 +141,7 @@
     </table>
   </div>
 
-  <!-- Modal لعرض الملاحظات -->
+  <!-- Modal الملاحظات -->
   <div class="modal fade" id="notesModal" tabindex="-1">
     <div class="modal-dialog modal-lg">
       <div class="modal-content">
@@ -111,7 +165,6 @@
           </div>
           <div class="modal-body">
             <input type="hidden" name="_id" id="edit_id">
-
             <div class="mb-3">
               <label class="form-label">الكلية</label>
               <select class="form-select" id="editCollege" required></select>
@@ -179,6 +232,7 @@
     const toastConfirmEl = document.getElementById('toastConfirm');
     const toastConfirm = new bootstrap.Toast(toastConfirmEl);
     let confirmCallback = null;
+    let lastCollege = "";
 
     function showSuccess(msg="✅ العملية نجحت") {
       document.querySelector("#toastSuccess .toast-body").innerText = msg;
@@ -235,6 +289,7 @@
       ];
       fields.forEach(f => {
         const cell = row.querySelector(`[data-field="${f}"]`);
+        if (!document.getElementById("toggle_" + f).checked) return; // استبعاد الأعمدة المخفية
         sum += parseFloat(cell?.innerText) || 0;
       });
       const availabilityCell = row.querySelector(".availability-cell");
@@ -243,7 +298,7 @@
       setTimeout(() => availabilityCell.classList.remove("highlight"), 1500);
     }
 
-    // إضافة مستمع لتحديد كامل النص عند التركيز
+    // مستمعات الأعمدة القابلة للتحرير
     function attachCellListeners(tr) {
       tr.querySelectorAll('[contenteditable="true"]').forEach(cell => {
         cell.addEventListener('focus', () => {
@@ -266,6 +321,7 @@
       try {
         const college = document.getElementById('collegeFilter').value;
         const auditor = document.getElementById('auditorFilter').value;
+        lastCollege = college || "جميع الكليات";
         let url = '/api/committees';
         const params = [];
         if (college) params.push(`college=${encodeURIComponent(college)}`);
@@ -278,11 +334,12 @@
 
         if(res.data.length === 0){
           tbody.innerHTML = `<tr><td colspan="18" class="text-center">لا توجد بيانات</td></tr>`;
+          document.getElementById("completionRateContainer").innerHTML = "";
           return;
         }
 
         res.data.sort((a,b)=>(a.college||"").localeCompare(b.college||"","ar"));
-
+        let totalAvailability = 0;
         res.data.forEach((c, idx) => {
           const tr = document.createElement('tr');
           tr.innerHTML = `
@@ -291,35 +348,49 @@
             <td>${c.committee_name}</td>
             <td>${c.auditor_name}</td>
             <td>${c.audit_date ? new Date(c.audit_date).toLocaleDateString('ar-EG'): '-'}</td>
-            <td contenteditable="true" data-field="formation_decision">${c.formation_decision ?? 0}</td>
-            <td contenteditable="true" data-field="work_plan">${c.work_plan ?? 0}</td>
-            <td contenteditable="true" data-field="performance_indicators">${c.performance_indicators ?? 0}</td>
-            <td contenteditable="true" data-field="meetings">${c.meetings ?? 0}</td>
-            <td contenteditable="true" data-field="consistency">${c.consistency ?? 0}</td>
-            <td contenteditable="true" data-field="coverage_books">${c.coverage_books ?? 0}</td>
-            <td contenteditable="true" data-field="report1">${c.report1 ?? 0}</td>
-            <td contenteditable="true" data-field="report2">${c.report2 ?? 0}</td>
-            <td contenteditable="true" data-field="report3">${c.report3 ?? 0}</td>
-            <td contenteditable="true" data-field="statistical_analysis">${c.statistical_analysis ?? 0}</td>
+            <td contenteditable="true" data-field="formation_decision" class="col-formation_decision">${c.formation_decision ?? 0}</td>
+            <td contenteditable="true" data-field="work_plan" class="col-work_plan">${c.work_plan ?? 0}</td>
+            <td contenteditable="true" data-field="performance_indicators" class="col-performance_indicators">${c.performance_indicators ?? 0}</td>
+            <td contenteditable="true" data-field="meetings" class="col-meetings">${c.meetings ?? 0}</td>
+            <td contenteditable="true" data-field="consistency" class="col-consistency">${c.consistency ?? 0}</td>
+            <td contenteditable="true" data-field="coverage_books" class="col-coverage_books">${c.coverage_books ?? 0}</td>
+            <td contenteditable="true" data-field="report1" class="col-report1">${c.report1 ?? 0}</td>
+            <td contenteditable="true" data-field="report2" class="col-report2">${c.report2 ?? 0}</td>
+            <td contenteditable="true" data-field="report3" class="col-report3">${c.report3 ?? 0}</td>
+            <td contenteditable="true" data-field="statistical_analysis" class="col-statistical_analysis">${c.statistical_analysis ?? 0}</td>
             <td class="availability-cell">${c.availability_score ?? 0}</td>
             <td>${
-  c.notes && c.notes.trim() !== "" && c.notes.trim() !== "<p><br></p>"
-    ? `<button class="btn btn-sm btn-info notes-btn" onclick="showNotes(\`${c.notes}\`)">🔍</button>` 
-    : '<span class="text-muted">لا توجد ملاحظات</span>'
-}</td>
-
+              c.notes && c.notes.trim() !== "" && c.notes.trim() !== "<p><br></p>"
+                ? `<button class="btn btn-sm btn-info notes-btn" onclick="showNotes(\`${c.notes}\`)">🔍</button>` 
+                : '<span class="text-muted">لا توجد ملاحظات</span>'
+            }</td>
             <td>
-  <div class="action-buttons">
-    <button class="btn btn-sm btn-success" onclick="saveRow(this, '${c._id}')">💾</button>
-    <button class="btn btn-sm btn-primary" onclick='editCommittee(${JSON.stringify(c)})'>✏️</button>
-    <button class="btn btn-sm btn-danger" onclick="confirmDelete('${c._id}')">🗑️</button>
-  </div>
-</td>
-
+              <div class="action-buttons">
+                <button class="btn btn-sm btn-success" onclick="saveRow(this, '${c._id}')">💾</button>
+                <button class="btn btn-sm btn-primary" onclick='editCommittee(${JSON.stringify(c)})'>✏️</button>
+                <button class="btn btn-sm btn-danger" onclick="confirmDelete('${c._id}')">🗑️</button>
+              </div>
+            </td>
           `;
           tbody.appendChild(tr);
           attachCellListeners(tr);
+          totalAvailability += c.availability_score ?? 0;
         });
+
+        // حساب نسبة الاكتمال حسب الأعمدة الظاهرة
+        const completionDiv = document.getElementById("completionRateContainer");
+        const numCommittees = res.data.length;
+        const visibleCols = Array.from(document.querySelectorAll('.col-toggle:checked')).length;
+        const denominator = numCommittees * visibleCols;
+        const completionRate = denominator > 0 ? ((totalAvailability / denominator) * 100).toFixed(2) : 0;
+
+        if (college) {
+          completionDiv.innerHTML = `📌 نسبة الاكتمال لكلية ${college} = ${completionRate}%<br>
+                                     📋 عدد لجان كلية ${college} = ${numCommittees}`;
+        } else {
+          completionDiv.innerHTML = `📌 نسبة الاكتمال لجميع الكليات = ${completionRate}%<br>
+                                     📋 عدد لجان جميع الكليات = ${numCommittees}`;
+        }
       } catch (err) { showError("❌ فشل تحميل البيانات"); console.error(err); }
     }
     loadCommittees();
@@ -367,6 +438,7 @@
       const row = btn.closest('tr');
       const updatedData = {};
       row.querySelectorAll('[contenteditable="true"]').forEach(cell => {
+        if (!document.getElementById("toggle_" + cell.getAttribute('data-field')).checked) return;
         updatedData[cell.getAttribute('data-field')] = parseFloat(cell.innerText) || 0;
       });
       updatedData.availability_score = parseFloat(row.querySelector(".availability-cell").innerText) || 0;
@@ -386,6 +458,21 @@
         } catch (err) { console.error(err); showError("❌ فشل الحذف"); }
       });
     }
+
+    // ✅ التحكم في إخفاء/إظهار الأعمدة
+    function applyColumnVisibility() {
+      document.querySelectorAll('.col-toggle').forEach(cb => {
+        const field = cb.getAttribute('data-field');
+        document.querySelectorAll('.col-' + field).forEach(cell => {
+          cell.classList.toggle('hidden-col', !cb.checked);
+        });
+      });
+      loadCommittees(); // إعادة تحميل لحساب النسبة بشكل صحيح
+    }
+
+    document.querySelectorAll('.col-toggle').forEach(cb => {
+      cb.addEventListener('change', applyColumnVisibility);
+    });
   </script>
 </body>
 </html>
