--- a/public/test1.html
+++ b/public/test1.html
@@ -17,7 +17,6 @@
     .filters { margin-bottom: 20px; width: 99%; margin-left: auto; margin-right: auto; }
     .action-buttons { display: flex; justify-content: center; align-items: center; gap: 5px; height: 100%; }
     .notes-btn { display: block; width: 100%; }
-
     th { text-align: center; vertical-align: middle; }
 
     /* ✅ ضبط عرض التاريخ LTR */
@@ -39,7 +38,7 @@
     }
 
     /* ✅ إخفاء الأعمدة ديناميكي */
-    .hidden-col { display: none; }
+    .hidden-col { display: none !important; }
   </style>
 </head>
 <body>
@@ -312,6 +311,7 @@
           cell.classList.add("highlight");
           setTimeout(() => cell.classList.remove("highlight"), 1500);
           updateAvailability(tr);
+          updateCompletionRate(); // تحديث نسبة الاكتمال
         });
       });
     }
@@ -339,7 +339,6 @@
         }
 
         res.data.sort((a,b)=>(a.college||"").localeCompare(b.college||"","ar"));
-        let totalAvailability = 0;
         res.data.forEach((c, idx) => {
           const tr = document.createElement('tr');
           tr.innerHTML = `
@@ -374,23 +373,10 @@
           `;
           tbody.appendChild(tr);
           attachCellListeners(tr);
-          totalAvailability += c.availability_score ?? 0;
+          updateAvailability(tr);
         });
 
-        // حساب نسبة الاكتمال حسب الأعمدة الظاهرة
-        const completionDiv = document.getElementById("completionRateContainer");
-        const numCommittees = res.data.length;
-        const visibleCols = Array.from(document.querySelectorAll('.col-toggle:checked')).length;
-        const denominator = numCommittees * visibleCols;
-        const completionRate = denominator > 0 ? ((totalAvailability / denominator) * 100).toFixed(2) : 0;
-
-        if (college) {
-          completionDiv.innerHTML = `📌 نسبة الاكتمال لكلية ${college} = ${completionRate}%<br>
-                                     📋 عدد لجان كلية ${college} = ${numCommittees}`;
-        } else {
-          completionDiv.innerHTML = `📌 نسبة الاكتمال لجميع الكليات = ${completionRate}%<br>
-                                     📋 عدد لجان جميع الكليات = ${numCommittees}`;
-        }
+        updateCompletionRate();
       } catch (err) { showError("❌ فشل تحميل البيانات"); console.error(err); }
     }
     loadCommittees();
@@ -431,7 +417,7 @@
         bootstrap.Modal.getInstance(document.getElementById('editModal')).hide();
         loadCommittees();
       } catch (err) { console.error(err); showError("❌ خطأ أثناء الحفظ"); }
-    });
+    }
 
     // حفظ من الجدول
     async function saveRow(btn, id) {
@@ -459,6 +445,31 @@
       });
     }
 
+    // ✅ تحديث نسبة الاكتمال
+    function updateCompletionRate() {
+      const rows = document.querySelectorAll('#committeesTable tr');
+      let totalAvailability = 0;
+      let numCommittees = 0;
+      rows.forEach(row => {
+        const availabilityCell = row.querySelector('.availability-cell');
+        if (availabilityCell) {
+          totalAvailability += parseFloat(availabilityCell.innerText) || 0;
+          numCommittees++;
+        }
+      });
+      const visibleCols = Array.from(document.querySelectorAll('.col-toggle:checked')).length;
+      const denominator = numCommittees * visibleCols;
+      const completionRate = denominator > 0 ? ((totalAvailability / denominator) * 100).toFixed(2) : 0;
+      const completionDiv = document.getElementById("completionRateContainer");
+      if (lastCollege && lastCollege !== "جميع الكليات") {
+        completionDiv.innerHTML = `📌 نسبة الاكتمال لكلية ${lastCollege} = ${completionRate}%<br>
+                                   📋 عدد لجان كلية ${lastCollege} = ${numCommittees}`;
+      } else {
+        completionDiv.innerHTML = `📌 نسبة الاكتمال لجميع الكليات = ${completionRate}%<br>
+                                   📋 عدد لجان جميع الكليات = ${numCommittees}`;
+      }
+    }
+
     // ✅ التحكم في إخفاء/إظهار الأعمدة
     function applyColumnVisibility() {
       document.querySelectorAll('.col-toggle').forEach(cb => {
@@ -467,7 +478,8 @@
           cell.classList.toggle('hidden-col', !cb.checked);
         });
       });
-      loadCommittees(); // إعادة تحميل لحساب النسبة بشكل صحيح
+      document.querySelectorAll('#committeesTable tr').forEach(tr => updateAvailability(tr));
+      updateCompletionRate();
     }
 
     document.querySelectorAll('.col-toggle').forEach(cb => {
